--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <hr style="width:80%; margin-bottom:30px">
 
 <div style="text-align:center; margin-bottom:30px">
-<a style="background-color:green; font-size:30px; padding:5px 10px 5px 10px; color:white;" href="C:\Users\HP\OneDrive\Desktop\WEB\mobile.html">Mobile Wallpapers</a>
+<a style="background-color:green; font-size:30px; padding:5px 10px 5px 10px; color:white;" href="mobile.html">Mobile Wallpapers</a>
 </div>
 
 <hr style="width:80%; margin-bottom:30px">
 
 <div style="text-align:center; margin-bottom:30px">
-<a style="background-color:green; font-size:30px; padding:5px 10px 5px 10px; color:white;" href="C:\Users\HP\OneDrive\Desktop\WEB\desktop.html">Desktop Wallpapers</a>
+<a style="background-color:green; font-size:30px; padding:5px 10px 5px 10px; color:white;" href="desktop.html">Desktop Wallpapers</a>
 </div>
 
 <hr style="width:80%;">
