--- a/mobile.html
+++ b/mobile.html
@@ -2,34 +2,34 @@
 <h1 style="font-size:30px; text-align:center;">Mobile Wallpapers</h1>
 
 <div style="text-align:center;">
-<a style="padding-right:20px;" href="C:\Users\HP\OneDrive\Desktop\WEB\index.html">Home</a>
-<a style="padding-right:20px;" href="C:\Users\HP\OneDrive\Desktop\WEB\mobile.html">Mobile</a>
-<a style="padding-right:20px;" href="C:\Users\HP\OneDrive\Desktop\WEB\desktop.html">desktop</a>
+<a style="padding-right:20px;" href="index.html">Home</a>
+<a style="padding-right:20px;" href="mobile.html">Mobile</a>
+<a style="padding-right:20px;" href="desktop.html">desktop</a>
 </div>
 
 
 <hr style="width:80%; margin-bottom:20px; margin-top:20px;">
 
 
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0006.jpg" ></img>
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0006.jpg" ></img>
 
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0003.jpg" ></img>
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0003.jpg" ></img>
 
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0001.jpg" ></img>
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0001.jpg" ></img>
 
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0012.jpg" ></img>
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0012.jpg" ></img>
 
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0007.jpg" ></img>
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0007.jpg" ></img>
 
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0004.jpg" ></img>
-
-
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0011.jpg" ></img>
-
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0010.jpg" ></img>
-
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0009.jpg" ></img>
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0004.jpg" ></img>
 
 
-<img style="margin-top:10px; width:32%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0017.jpg" ></img>
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0011.jpg" ></img>
+
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0010.jpg" ></img>
+
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0009.jpg" ></img>
+
+
+<img style="margin-top:10px; width:32%" src="IMG-20240728-WA0017.jpg" ></img>
 
