--- a/desktop.html
+++ b/desktop.html
@@ -2,22 +2,22 @@
 <h1 style="font-size:30px; text-align:center;">Desktop Wallpapers</h1>
 
 <div style="text-align:center;">
-<a style="padding-right:20px;" href="C:\Users\HP\OneDrive\Desktop\WEB\index.html">Home</a>
-<a style="padding-right:20px;" href="C:\Users\HP\OneDrive\Desktop\WEB\mobile.html">Mobile</a>
-<a style="padding-right:20px;" href="C:\Users\HP\OneDrive\Desktop\WEB\desktop.html">desktop</a>
+<a style="padding-right:20px;" href="index.html">Home</a>
+<a style="padding-right:20px;" href="mobile.html">Mobile</a>
+<a style="padding-right:20px;" href="desktop.html">desktop</a>
 </div>
 
 <hr style="width:80%; margin-bottom:20px; margin-top:20px">
 
 
-<img style="margin-top:10px; width:49%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0014.jpg" ></img>
+<img style="margin-top:10px; width:49%" src="IMG-20240728-WA0014.jpg" ></img>
 
-<img style="margin-top:10px; width:49%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0016.jpg"></img>
+<img style="margin-top:10px; width:49%" src="IMG-20240728-WA0016.jpg"></img>
 
-<img style="margin-top:10px; width:49%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0005.jpg" ></img>
+<img style="margin-top:10px; width:49%" src="IMG-20240728-WA0005.jpg" ></img>
 
-<img style="margin-top:10px; width:49%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0006 - Copy.jpg" ></img>
+<img style="margin-top:10px; width:49%" src="IMG-20240728-WA0006 - Copy.jpg" ></img>
 
-<img style="margin-top:10px; width:49%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0018.jpg" ></img>
+<img style="margin-top:10px; width:49%" src="IMG-20240728-WA0018.jpg" ></img>
 
-<img style="margin-top:10px; width:49%" src="C:\Users\HP\OneDrive\Desktop\WEB\IMG-20240728-WA0019.jpg" ></img>
+<img style="margin-top:10px; width:49%" src="IMG-20240728-WA0019.jpg" ></img>
